# langchain-learning

./: pyproject.toml
task1/: main.py
task10/: main.py
task11/: main.py
task2/: main.py
task3/: aiIntro.txt  main.py
task4/: main.py
task5/: main.py
task6/: main.py
task7/: main.py
task8/: main.py
task9/: main.py
